--- a/toto/toto.toml
+++ b/toto/toto.toml
@@ -1,6 +1,7 @@
 [saved-toto]
 title = "toto" 
 db-servers-hosts = "db1,db2"
+db-servers-prefered-master = "db1"
 prov-db-cpu-cores = "2"
 prov-db-disk-size = "700"
 prov-db-memory = "1024"
