--- a/toto/toto.toml
+++ b/toto/toto.toml
@@ -2,6 +2,7 @@
 title = "toto" 
 db-servers-hosts = "db1,db2"
 db-servers-prefered-master = "db1"
+log-level = 4
 prov-db-cpu-cores = "2"
 prov-db-disk-size = "700"
 prov-db-memory = "1024"
