--- a/tata/tata.toml
+++ b/tata/tata.toml
@@ -1,2 +1,13 @@
 [saved-tata]
 title = "tata" 
+db-servers-hosts = "db1,db2"
+prov-db-cpu-cores = "2"
+prov-db-disk-size = "700"
+prov-db-memory = "1024"
+prov-proxy-cpu-cores = "4"
+prov-proxy-disk-size = "80"
+prov-service-plan = "x2.tiny"
+proxysql = true
+proxysql-servers = "proxysql1"
+shardproxy = true
+shardproxy-servers = "shardproxy1:3306"
