Update emma.toml file

--- a/emma/emma.toml
+++ b/emma/emma.toml
@@ -1,2 +1,21 @@
 [saved-emma]
 title = "emma" 
+alert-pushover-user-token = "9fc0a7cb7635853da3139fe0ddde3dfd64bc2f60d3"
+api-credentials = "e63aa70c684f905a975b04abde53e63862e31201df"
+api-credentials-external = "7e9933cd9f8e615ff804dd71b1b713df9cb53f4b41"
+arbitration-external-secret = "bf420bdcd6e7be3f1255dfcc423739b5b8fd76fbc3"
+backup-restic-aws-access-secret = "30fae9409960b9c65647e77dce94bbae51d96c87a6"
+backup-restic-password = "1691eab095a80752129a73eccf8b9f916834feec35"
+backup-streaming-aws-access-secret = "845a26d61b16f77c70710c58d7574c27d1541e9a57"
+db-servers-credential = "3df8d66093b18ff1355727df894ec35e6a99046a10"
+haproxy-password = "e06c385dbce0a29303bfbcf5eab4cf87ff4df918cc"
+mail-smtp-password = "7a1199b37195d43d123201a5b30a983ea37b103f1a"
+maxscale-pass = "2408e11864785eea0ddba295dd54962708bee7d0d0"
+monitoring-write-heartbeat-credential = "62ec46867d9d77740da9699ae025f5d6b687b43503"
+myproxy-password = "bdbd4dfd1e0b2cb7e8ea59160e7ca858af810be32c"
+onpremise-ssh-credential = "3c6fea806b2450107fb0aa33eb1748fd3bb73f007d"
+opensvc-p12-secret = "cda357b2eda92942c61afae2f95d8a866c4a738189"
+proxysql-password = "2a0d62388d21c58d8b41366f22038d75bf5a1d5564"
+replication-credential = "1a953b105cbb5d8204d4d35dca340f11519146071e"
+shardproxy-credential = "1fada19c29aaecbbd361a9b5f8695d7e06476a835c"
+vault-secret-id = "1838ffcfdad864c9cc3f4a937624207b807fa88389"
