Update tata.toml file

--- a/tata/tata.toml
+++ b/tata/tata.toml
@@ -1,6 +1,21 @@
 [saved-tata]
 title = "tata" 
+alert-pushover-user-token = "36fad9c4ea966554838704a7d54bcf77ea2ba102a9"
+api-credentials = "969972f320715060b68d9f4130c137ccabfe965985"
+api-credentials-external = "6a7fbcb6e4ecc0e9a86e07a77eb414e5752891140b"
+arbitration-external-secret = "f4217516b4a0c8f5cfc0fabbfab031a9a9b861defd"
+backup-restic-aws-access-secret = "25ef31d176ccd044bb01f50bdc13f422b43d5b5bc8"
+backup-restic-password = "8478676f5959be6d86698a984b07de08694b20099b"
+backup-streaming-aws-access-secret = "5265b10c015aa9d263c1e701c1de7878a5242339fa"
+db-servers-credential = "efbf98bd8f5ab66b77e9279d60a5ef2750797be4d4"
 db-servers-hosts = "db1,db2"
+haproxy-password = "9c78828ddccb9631cf18419abe3af05f58ae470f49"
+mail-smtp-password = "eb3bfe8ac6a14ffde11e9236340f1711b6316081d4"
+maxscale-pass = "d33549e2ec317b7a4274c4a1413a247ee2455b6654"
+monitoring-write-heartbeat-credential = "b7af4d83b9db9af299057157cf6a499803393791c7"
+myproxy-password = "6887a74ed7afb1b2db91ea99f8996a751e6d8a6b6a"
+onpremise-ssh-credential = "5594fc95b64221202295ae6635f24082b5054d3895"
+opensvc-p12-secret = "e3fc16b760c1cc1b2916311ad4989f6e8a1e0d3843"
 prov-db-cpu-cores = "2"
 prov-db-disk-size = "700"
 prov-db-memory = "1024"
@@ -8,7 +23,11 @@ prov-proxy-cpu-cores = "4"
 prov-proxy-disk-size = "80"
 prov-service-plan = "x2.tiny"
 proxysql = true
+proxysql-password = "3fe9ab16ffdbeb55f9f7020322f67371b5ba61007b"
 proxysql-servers = "proxysql1"
 proxysql-user = "external"
+replication-credential = "29c79553d0ac0f2888aeab47b4b229b1b59d8d6905"
 shardproxy = true
+shardproxy-credential = "60f7dd8a67a8aefc0d9d905ae8b12232230ca87753"
 shardproxy-servers = "shardproxy1:3306"
+vault-secret-id = "2e35baed1cc09e4769917b7a5e0acd29b6606c9d9e"
