Update emma.toml file

--- a/emma/emma.toml
+++ b/emma/emma.toml
@@ -1,2 +1,16 @@
 [saved-emma]
-title = "emma"
+title = "emma" 
+alert-pushover-user-token = "7f9b493b0eae0273784128e6be343bc9e89ff850da"
+api-credentials = "ebeefcf87323c6411dbafb4eff60d0d781ac0266da"
+api-credentials-external = "de04c5fe11bffa00642f75696743ed2eae81fce537"
+arbitration-external-secret = "e38a33623c7fd8afba643c1182df1da277cb36923e"
+backup-restic-aws-access-secret = "f6b2d364a55b510424a8c9b3f3469c0581f4705e29"
+backup-restic-password = "48be928255f5dde62d34cae0e4a1b4743c5e8bc836"
+backup-streaming-aws-access-secret = "86ac88615cb2f58947d45b9d08371865da52e5def8"
+haproxy-password = "9da0d33de944dd504c36593c293f14367b627fda6c"
+maxscale-pass = "dd51f05925dd74ae43bcc9485c705cf23cc3fcaf3e"
+monitoring-write-heartbeat-credential = "42c790753d1f966e475b02cefa360539f26593ad86"
+myproxy-password = "7c15f1d2781fda9fde1e084df7e18965910a630f06"
+onpremise-ssh-credential = "62251dd4be2929b0b324597005bdc19e1ffcc159ea"
+proxysql-password = "5293defe4c20765a519a11196e241fd546a0f79a51"
+shardproxy-credential = "8823ee670688f74471f514a79523e9d9709af62847"
