Update tata.toml file

--- a/tata/tata.toml
+++ b/tata/tata.toml
@@ -1,5 +1,6 @@
 [saved-tata]
 title = "tata" 
+db-servers-credential = "undefinedac79f04eb8a95f687eaed3ca512eac444524b4c02a4750f0ff"
 db-servers-hosts = "db1,db2"
 prov-db-cpu-cores = "2"
 prov-db-disk-size = "700"
