Update tata.toml file

--- a/tata/tata.toml
+++ b/tata/tata.toml
@@ -1,6 +1,6 @@
 [saved-tata]
 title = "tata" 
-db-servers-credential = "undefined:26c108fffd55620275324bb6729b9cc32f1e6db5f98ba2f5ad"
+db-servers-credential = "root:88ea1292cc1e9084b84b9a3f0dadf413a916efef"
 db-servers-hosts = "db1,db2"
 prov-db-cpu-cores = "2"
 prov-db-disk-size = "700"
