Update emma.toml file

--- a/emma/immutable.toml
+++ b/emma/immutable.toml
@@ -1,490 +1,77 @@
-monitoring-write-heartbeat
-monitoring-sharedir
-http-port
-kube-config
-sphinx
-graphite-carbon-port
-sysbench-test
-log-rotate-max-age
-monitoring-query-rules
-replication-master-slave-never-relay
-arbitration-peer-hosts
-failover-switch-to-prefered
-proxysql-binary-path
-prov-db-compliance
-http-bind-address
-prov-db-disk-fs
-shardproxy-janitor-weights
-autorejoin-logical-backup
-prov-db-domain
-prov-proxy-agents
-api-credentials
-scheduler-db-servers-logs-table-keep
-prov-proxy-disk-size
-backup-load-script
-mail-to
-alert-slack-url
-force-slave-no-gtid-mode
-failover-log-file-keep
-maxscale-read-write-port
-proxysql-servers-ipv6
-proxyjanitor-user
-force-binlog-slowqueries
-proxysql-debug
-backup-keep-hourly
-prov-db-cpu-cores
-monitoring-wait-retry
-prov-proxy-net-gateway
-onpremise-ssh-db-job-script
-monitoring-basedir
-monitoring-erreur-log-length
-db-servers-credential
-scheduler-rolling-restart-cron
-maxscale-get-info-method
-mail-smtp-user
-onpremise-ssh
-db-servers-tls-server-key
-prov-db-tags
-backup-restic-repository
-monitoring-capture-trigger
-prov-db-disk-fs-compress
-arbitration-external-secret
-backup-keep-monthly
-scheduler-db-servers-logs-cron
-proxy-servers-backend-compression
-haproxy
-failover-post-script
-proxyjanitor-servers
-log-level
-autorejoin-zfs-flashback
-alert-slack-channel
-arbitration-read-timeout
-mail-smtp-tls-skip-verify
-http-root
-prov-orchestrator-enable
-prov-db-disk-size
-maxscale-server-match-port
-git-url
-backup-myloader-path
-prov-tls-server-cert
-prov-db-load-sql
-graphite-carbon-server-port
-prov-db-disk-iops
-arbitration-external-unique-id
-prov-proxy-docker-haproxy-img
-myproxy-user
-prov-db-disk-iops-latency
-prov-sphinx-disk-device
-monitoring-ticker
-prov-db-disk-system-size
-prov-proxy-docker-maxscale-img
-api-oauth-client-id
-replication-credential
-sphinx-servers-ipv6
-slapos-haproxy-partitions
-haproxy-password
-registry-consul-token
-force-slave-heartbeat-time
-switchover-at-equal-gtid
-onpremise-ssh-credential
-alert-script
-scheduler-db-servers-optimize-cron
-proxyjanitor-admin-port
-prov-proxy-route-mask
-scheduler-db-servers-sender-ports
-monitoring-queries
-failover-falsepositive-maxscale-timeout
-monitoring-write-heartbeat-credential
-autorejoin-flashback
-monitoring-long-query-time
-prov-sphinx-disk-pool
-prov-sphinx-tags
-force-sync-innodb
-proxysql-writer-hostgroup
-prov-db-service-type 
-autorejoin-force-restore
-proxysql-bootstrap-variables
-backup-restic-aws
-graphite-carbon-link-port
-force-disk-relaylog-size-limit-size
-cloud18-credentials
-graphite-embedded
-prov-proxy-route-policy
-monitoring-schema-change-script
-scheduler-db-servers-receiver-use-ssl
-scheduler-db-servers-logs-table-rotate
-db-servers-locality
-failover-falsepositive-ping-counter
-graphite-carbon-api-port
-monitoring-confdir
-shardproxy-load-system
-proxy-servers-backend-max-connections
-failover-readonly-state
-myproxy
-backup-save-script
-cloud18-domain
-prov-db-binary-in-tarball
-shardproxy-servers-ipv6
+proxysql-copy-grants
 log-file
-backup-restic-aws-access-secret
-db-servers-tls-client-key
-prov-proxy-disk-type
-backup-logical-type
-failover-semisync-state
-db-servers-tls-ca-cert
-switchover-at-sync
-replication-delayed-hosts
-db-servers-ignored-hosts
-failover-max-slave-delay
-backup-logical-dump-threads
-prov-db-disk-type
-monitoring-schema-change
-log-rotate-max-size
-prov-proxy-route-port
-replication-error-script
-failover-falsepositive-external-port
-alert-pushover-app-token
-prov-sphinx-memory
-prov-proxy-docker-proxysql-img
-registry-consul
-prov-db-expire-log-days
-failover-pre-script
-alert-slack-user
-maxscale-pass
-cloud18-portal
-monitoring-long-query-script
-proxysql-user
-force-noslave-behind
-force-binlog-compress
-onpremise-ssh-private-key
-prov-db-load-csv
-shardproxy-ignore-tables
-mail-smtp-addr
-scheduler-db-servers-logs-table-rotate-cron
-prov-db-cleanup-script
-force-slave-heartbeat
-backup-physical-type
-prov-proxy-disk-pool
-force-slave-gtid-mode-strict
-switchover-wait-route-change
-backup-mydumper-path
-monitoring-alert-trigger
-backup-mydumper-options
-db-servers-tls-server-cert
-scheduler-jobs-ssh
-prov-proxy-memory
-prov-db-client-basedir
-arbitration-external-hosts
-monitoring-scheduler
-prov-sphinx-reindex-schedule
-git-username
-cloud18-sub-domain
-opensvc-use-collector-api
-replication-multi-master-wsrep-port
-sysbench-threads
-replication-multi-master-wsrep
-proxy-servers-read-on-master-no-slave
-backup-binlogs
-haproxy-api-read-backend
-autoseed
-prov-proxy-route-addr
-failover-falsepositive-heartbeat
-proxysql-servers
-backup-binlogs-keep
-proxysql-bootstrap
-onpremise-ssh-start-proxy-script
-api-credentials-acl-discard
-vault-server-addr
-replication-multi-master-ring
-prov-db-memory-threaded-pct
-failover-mode
-backup
-prov-proxy-agents-failover
-backup-streaming-debug
-db-servers-hosts
-prov-net-cni
-api-oauth-client-secret
-proxysql-password
-monitoring-capture
-backup-streaming-region
-scheduler-db-servers-physical-backup-cron
-db-servers-connect-timeout
-prov-sphinx-disk-size
-autorejoin-backup-binlog
-maxscale-maxinfo-port
-failover-event-scheduler
-proxysql
-alert-teams-url
-proxysql-save-to-disk
-sphinx-janitor-weights
-switchover-decrease-max-conn
-replication-restart-on-sqlerror-match
-prov-db-disk-pool
-check-grants
-prov-db-disk-snapshot-prefered-master
-sphinx-servers
-backup-restic-binary-path
-sphinx-sql-port
-prov-service-plan
-haproxy-janitor-weights
-force-slave-gtid-mode
-cloud18-sub-domain-zone
-monitoring-ignore-errors
-scheduler-db-servers-logs
-maxscale
-scheduler-rolling-restart
-monitoring-long-query-log-length
-alert-pushover-user-token
-prov-proxy-net-mask
-onpremise-ssh-port
-prov-db-disk-docker-size
-prov-proxy-tags
-backup-mysqlclient-path
-shardproxy-credential
-prov-db-max-connections
-cloud18
-graphite-carbon-pprof-port
-monitoring-key-path
-proxy-servers-backend-max-replication-lag
-failover-falsepositive-external
-monitoring-long-query-with-table
-maxscale-servers-ipv6
-prov-proxy-disk-device
-proxy-servers-read-on-master
-myproxy-password
-prov-db-agents
-prov-proxy-docker-shardproxy-img
-haproxy-ip-read-bind
-db-servers-backup-hosts
-maxscale-binary-path
-haproxy-write-port
-prov-sphinx-docker-img
-switchover-wait-kill
-prov-sphinx-disk-fs
-scheduler-db-servers-receiver-ports
-prov-service-plan-registry
-maxscale-read-port
-arbitration-failed-master-script
-maxscale-disable-monitor
-autorejoin-script
-haproxy-debug
-replication-multisource-head-clusters
-failover-time-limit
-replication-active-passive
-haproxy-servers
-shardproxy-universal-tables
-onpremise-ssh-start-db-script
-force-sync-binlog
-sysbench-tables
-prov-sphinx-cpu-cores
-proxysql-janitor-weights
-mail-smtp-password
-api-credentials-acl-allow
-opensvc-p12-secret
-replication-master-connect-retry
-test-inject-traffic
-haproxy-user
-monitoring-tenant
-haproxy-mode
-prov-sphinx-disk-type
-scheduler-sla-rotate-cron
-autorejoin-flashback-on-sync
-api-port
-mail-from
-monitoring-address
-registry-consul-credential
-autorejoin-physical-backup
-proxysql-bootstrap-users
-haproxy-api-port
-proxyjanitor-port
-failover-falsepositive-maxscale
-replication-multi-master-wsrep-sst-method
-force-binlog-annotate
-http-session-lifetime
-maxscale-servers
-prov-proxy-volume-data
-prov-db-datadir-version
-sysbench-binary-path
-slapos-db-partitions
-log-sst
-autorejoin
-maxscale-binlog-port
-failover-event-status
-vault-mount
-db-servers-tls-client-cert
-autorejoin-flashback-on-unsync
-switchover-slave-wait-catch
-monitoring-variable-diff
-backup-keep-yearly
-maxscale-port
-api-https-bind
-prov-db-volume-docker
-http-server
-force-slave-semisync
-vault-auth
-opensvc-admin-user
-proxyjanitor-debug
-switchover-wait-trx
-prov-proxy-stop-script
-opensvc-p12-certificate
-monitoring-processlist
-prov-proxy-start-script
-api-bind
-switchover-copy-old-leader-gtid
-prov-db-start-script
-proxysql-multiplexing
-replication-master-slave-pg-locgical
-backup-mysqldump-path
-backup-streaming-aws-access-key-id
-monitoring-ssl-key
-prov-docker-daemon-private
-check-replication-state
-prov-db-binary-tarball-name
-monitoring-innodb-status
-graphite-carbon-pickle-port
-backup-lockddl
-extproxy
-prov-db-net-iface
-sphinx-port
-prov-proxy-service-type
-db-servers-ignored-readonly
-replication-multi-master-grouprep-port
-proxysql-port
-backup-logical-load-threads
-http-refresh-interval
-haproxy-servers-ipv6
-haproxy-api-write-backend
-log-heartbeat
-monitoring-datadir
-log-rotate-max-backup
-prov-db-docker-img
-maxscale-binlog
-backup-restic
-db-servers-read-timeout
-proxysql-bootstrap-hostgroups
-prov-db-disk-snapshot-keep
-force-binlog-checksum
-maxscale-user
-haproxy-stat-port
-proxysql-admin-port
-slapos-shardproxy-partitions
-proxyjanitor-servers-ipv6
-api-credentials-external
-replication-master-slave-pg-stream
-force-disk-relaylog-size-limit
-scheduler-rolling-reprov
-monitoring-plugins
-log-git
-scheduler-db-servers-logical-backup
-replication-use-ssl
-force-inmemory-binlog-cache-size
-backup-logical-dump-system-tables
-slapos-sphinx-partitions
-backup-restic-password
-prov-orchestrator-cluster
-proxyjanitor-binary-path
-maxscale-write-port
-prov-db-net-gateway
-haproxy-ip-write-bind
-log-sql-in-monitoring
-failover-restart-unsafe
-prov-serialized
-failover-at-sync
-replication-multi-tier-slave
 sysbench-v1
-proxysql-reader-hostgroup
-log-syslog
-failover-limit
-scheduler-db-servers-physical-backup
-prov-db-disk-temp-size
-api-oauth-provider-url
-prov-db-volume-data
-prov-tls-server-key
-maxscale-janitor-weights
-prov-db-binary-basedir
-prov-proxy-compliance
-opensvc-register
-vault-mode
-replication-multi-master
-db-servers-tls-use-generated-cert
-autorejoin-slave-positional-heartbeat
-prov-db-stop-script
-switchover-wait-write-query
-shardproxy-copy-grants
-prov-proxy-cpu-cores
-extproxy-address
-backup-mysqldump-options
-test
-prov-db-net-mask
+prov-proxy-docker-proxysql-img
+http-root
+prov-proxy-docker-shardproxy-img
+prov-db-tags
+prov-proxy-service-type
+prov-proxy-disk-type
+db-servers-hosts
+prefmaster
 shardproxy
-prov-proxy-net-iface
-force-binlog-row
-registry-servers
-prov-db-memory-shared-pct
-api-credentials-secure-config
-replication-source-name
-backup-restic-aws-access-key-id
-backup-keep-daily
-backup-streaming
-sysbench-scale
-backup-myloader-options
-registry-consul-weights
-proxysql-bootstrap-query-rules
-prov-proxy-disk-fs
-prov-orchestrator
-haproxy-read-port
-log-failed-election
-prov-sphinx-service-type
-proxyjanitor-password
-backup-mysqlbinlog-path
-opensvc
-prov-net-cni-cluster
-opensvc-collector-account
-prov-proxy-bootstrap-script
 db-servers-prefered-master
-backup-streaming-aws-access-secret
-check-binlog-filters
-autorejoin-mysqldump
-backup-streaming-endpoint
-prov-proxy-docker-mysqlrouter-img
-scheduler-jobs-ssh-cron
-shardproxy-servers
-scheduler-db-servers-optimize
-vault-role-id
-graphite-carbon-host
-slapos-proxysql-partitions
-force-slave-readonly
-sysbench-time
+prov-db-disk-size
+proxysql
+prov-db-agents
+git-url
+monitoring-address
 prov-db-memory
-monitoring-long-query-with-process
-scheduler-rolling-reprov-cron
-backup-keep-weekly
-check-replication-filters
-failover-falsepositive-heartbeat-timeout
-prov-db-apply-dynamic-config
-replication-delayed-time
-prov-sphinx-agents
-failover-superreadonly-state
-prov-proxy-cleanup-script
-switchover-decrease-max-conn-value
-haproxy-binary-path
-graphite-metrics
-replication-multi-master-grouprep
-monitoring-pause
-git-acces-token
-arbitration-external
-myproxy-port
-backup-streaming-bucket
-force-slave-heartbeat-retry
-prov-tls-server-ca
-scheduler-db-servers-logical-backup-cron
-monitoring-capture-file-keep
-monitoring-ssl-cert
-monitoring-save-config
-prov-db-disk-device
-monitoring-performance-schema
-slapos-maxscale-partitions
-prov-db-bootstrap-script
-sphinx-config
+monitoring-datadir
+git-username
+prov-proxy-volume-data
+opensvc-use-collector-api
+log-git
+hosts
+vault-role-id
+proxysql-bootstrap
+sysbench-binary-path
+title
+monitoring-sharedir
+replication-master-connection
+replication-credential
 vault-secret-id
+prov-db-volume-data
+monitoring-scheduler
+db-servers-connect-timeout
+vault-mode
+shardproxy-credential
+proxysql-password
+prov-net-cni-cluster
+connect-timeout
+proxysql-user
+include
+prov-orchestrator-cluster
+prov-orchestrator
+prov-db-service-type
+vault-mount
 opensvc-host
+monitoring-ssl-cert
+opensvc-p12-certificate
+prov-net-cni
+prov-proxy-agents
+master-connection
+monitoring-ssl-key
+api-credential
+api-port
+proxysql-port
+prov-docker-daemon-private
+opensvc-p12-secret
+http-bind-address
+prov-db-disk-iops
+api-credentials-external
+user
+db-servers-credential
+prov-proxy-disk-size
+monitoring-save-config
+prov-db-cpu-cores
+monitoring-key-path
+rpluser
+shardproxy-servers
+force-slave-readonly
+prov-db-docker-img
+git-acces-token
+replication-source-name
+api-credentials-acl-allow
+proxysql-servers
+prov-db-disk-type
